--- a/心得感想.md
+++ b/心得感想.md
@@ -3,3 +3,7 @@
 
 # 陳泓瑜
 
+
+
+# 黃柏瑞
+我們這組資料庫做的是遊戲，也是我第一次接觸使用遊戲引擎來開發遊戲，剛開始練習試做我覺得挺好玩，但到了debug環節就不是如此了，尤其是我搞得動畫匯出後不知啥原因都無法顯示，本預計有hero*5+boss*15的不同角色動畫，後來只好用最遜的方法處理。論未來遊戲發展潛力的話，我是覺得可以新增個職業機制，讓玩家選擇有興趣的職業(法師、刺客、戰士等等)，如果要再增加遊玩性的話，可以朝回合制邁進，像pokemon那樣，自己選擇招式來跟敵人對打。最後感謝有陳泓瑜教我怎麼分析遊戲內容的state，來寫出相對應的遊戲進行腳本，以及超扛的組員們完成這個專題。
