--- a/心得感想.md
+++ b/心得感想.md
@@ -2,8 +2,10 @@
 這次資料庫的期末專題讓我了解到了分工的合作性，以及撰寫程式碼在合作上的難度，因為每個人在寫程式時都會因為各種原因而有不同的習慣，在這種時候要在別人的基礎上去做修改刪減其實還滿困難的，當然也可因為溝通的問題導致兩個人做出了類似的東西導致在功能上有了衝突，幫別人的程式碼debug也是一件十分痛苦的事情，就好像他的GPT不夠聰明一樣總是能生成一堆有問題的東西，來增加其他人的工作量。總而言之這次課程讓我學到很多，不僅僅是在資料庫或者課程方面的相關知識，更多的也是關於團隊合作上的一些經歷，我認為兩者的重要程度不相上下。只遺憾沒在選擇畢業專題隊友前遇到這門課。
 
 # 陳泓瑜
-
+# 姚睿
+藉由這次的資料庫專題我學習到了資訊同步的重要性，可能因為工作時間還有作息跟小組成員不同，導致我做完東西上傳之後，可能會有人跟我做了一樣的東西並直接覆蓋過去，以前都在說什麼遊戲的平衡性調整很爛，但是實際在製作之後才發現角色一多真的不是幾個小時就能調整完的，尤其是製作完之後還會被 消失。謝謝戴佑丞花費大把時間製作的UI，讓我學到接著別人的程式碼寫需要注意的各種問題，第一次製作遊戲相關的專題讓我很頭痛，尤其我平常根本就不玩遊戲讓我花了時間去臆測使用者的心理。如果我以後有機會選擇題目我不會再製作遊戲，但還是respect所有製作遊戲的人。也特別感謝陳泓瑜教會我怎麼用git。
 
 
 # 黃柏瑞
 我們這組資料庫做的是遊戲，也是我第一次接觸使用遊戲引擎來開發遊戲，剛開始練習試做我覺得挺好玩，但到了debug環節就不是如此了，尤其是我搞得動畫匯出後不知啥原因都無法顯示，本預計有hero*5+boss*15的不同角色動畫，後來只好用最遜的方法處理。論未來遊戲發展潛力的話，我是覺得可以新增個職業機制，讓玩家選擇有興趣的職業(法師、刺客、戰士等等)，如果要再增加遊玩性的話，可以朝回合制邁進，像pokemon那樣，自己選擇招式來跟敵人對打。最後感謝有陳泓瑜教我怎麼分析遊戲內容的state，來寫出相對應的遊戲進行腳本，以及超扛的組員們完成這個專題。
+
